feat: check hw 3

--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -8,8 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## импорты"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +36,22 @@
     "import numpy as np\n",
     "from collections import Counter\n",
     "from operator import itemgetter\n",
-    "\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## функции"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def normalize(text):\n",
     "    normalized_text = [word.text.strip(punctuation) for word \\\n",
     "                                                            in razdel_tokenize(text)]\n",
@@ -46,26 +68,9 @@
     "    tokens = [token for token in tokens]\n",
     "    for i in range(0,len(tokens)-n+1):\n",
     "        ngrams.append(tuple(tokens[i:i+n]))\n",
-    "    return ngrams"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# чуть-чуть ограничил, т.к. сичтается онь долго\n",
-    "bad = open('data/sents_with_mistakes.txt', encoding='utf8').read().splitlines()[:100]\n",
-    "true = open('data/correct_sents.txt', encoding='utf8').read().splitlines()[:100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return ngrams\n",
+    "\n",
+    "\n",
     "# напишем функцию, которая будет сопоставлять слова в правильном и ошибочном варианте\n",
     "# разобьем предложение по пробелам и удалим пунктуация на границах слов\n",
     "def align_words(sent_1, sent_2):\n",
@@ -79,8 +84,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### загрузим данные"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# чуть-чуть ограничил, т.к. сичтается онь долго\n",
+    "bad = open('data/sents_with_mistakes.txt', encoding='utf8').read().splitlines()[:100]\n",
+    "true = open('data/correct_sents.txt', encoding='utf8').read().splitlines()[:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,24 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "WORDS = Counter(re.findall('\\w+', corpus.lower()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# фунцкия расчета вероятности слова\n",
-    "N = sum(WORDS.values())\n",
-    "def P(word, N=N): \n",
-    "    \"Вычисляем вероятность слова\"\n",
-    "    return WORDS[word] / N"
+    "all_wrd = Counter(re.findall('\\w+', corpus.lower()))"
    ]
   },
   {
@@ -117,8 +134,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## еще функции))"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,18 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# сортируем dict по значению чтобы при обходе сразу выбиралось амое частотное слово\n",
-    "tmp_dict = dict(WORDS)\n",
+    "# сортируем dict по значению чтобы при обходе сразу выбиралось самое частотное слово\n",
+    "tmp_dict = dict(all_wrd)\n",
     "WORDS_sort = dict(sorted(tmp_dict.items(), key=itemgetter(1), reverse=True)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,16 +200,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:06<00:00, 14.41it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "CPU times: user 16.6 s, sys: 0 ns, total: 16.6 s\n",
-      "Wall time: 16.8 s\n"
+      "CPU times: user 6.9 s, sys: 43 ms, total: 6.94 s\n",
+      "Wall time: 6.94 s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -201,7 +238,7 @@
     "correct_broken = 0\n",
     "\n",
     "cashed = {}\n",
-    "for i in range(len(true)):\n",
+    "for i in tqdm(range(len(true))):\n",
     "    word_pairs = align_words(true[i], bad[i])\n",
     "    for pair in word_pairs:\n",
     "        # чтобы два раза не исправлять одно и тоже слово - закешируем его\n",
@@ -223,24 +260,21 @@
     "            total_mistaken += 1\n",
     "            if pair[0] == predicted:\n",
     "                mistaken_fixed += 1\n",
-    "        \n",
-    "    if not i % 100:\n",
-    "        print(i)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3465346534653465\n",
-      "0.11724137931034483\n",
-      "0.6190476190476191\n"
+      "0.3357335733573357\n",
+      "0.10344827586206896\n",
+      "0.629399585921325\n"
      ]
     }
    ],
@@ -282,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
